# Legir

./: .gitignore  AGENTS.md  App.tsx  README.md  bun.lockb  components.json  constants.ts  eslint.config.js  index.html  index.tsx  metadata.json  package.json  tsconfig.json  turbo.json  types.ts  vercel.json  vite.config.ts  vitest.config.ts
components/: AIDetectionDialog.tsx  AnnotationToolbar.tsx  FieldTreePanel.tsx  KeyboardShortcutsHelp.tsx  LandingPage.tsx  OutlinePanel.tsx  PDFPage.tsx  PDFUploader.tsx  PropertiesPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  Toolbar.tsx  Workspace.tsx  ZoomControls.tsx  language-provider.tsx  mode-toggle.tsx
docs/: AI_CHAT_PANEL_PLAN.md  AI_SDK_MIGRATION_CHECKLIST.md  ARCHITECTURE.md  FULL_PAGE_TRANSLATION.md  PDF_LIB_FORK_EVALUATION.md  PDF_RENDERING_LARGE_PAGES_PLAN.md  PDF_TEXT_REDACTION_PLAN.md  SHAPES_ANNOTATIONS.md  TEXT_ROTATION_AND_FREETEXT_ROTATION.md
lib/: utils.ts
locales/: en.json  en.ts  zh.json  zh.ts
scripts/: create-square-svg.ts  generate-app-icons.sh  generate-icons.sh  generate-icons.ts  generate-pdf-document-icons.sh
services/: geminiService.ts  pdfService.ts  storageService.ts
src/: App.tsx  AppRoutes.tsx  constants.ts  font-faces.css  globals.css  globals.d.ts  index.tsx  sw.ts  types.ts  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  pdf-document.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: file-association-hooks.nsh  installer.nsi  main.wxs  pdf-file-icon.wxs
(+644 files in other folders)
